--- a/LeagueManagement/Web.config
+++ b/LeagueManagement/Web.config
@@ -72,11 +72,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+    <defaultConnectionFactory  type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+        <parameter value="Data Source=.;Initial Catalog=SportsSite;Integrated Security=True;MultipleActiveResultSets=True" />
       </parameters>
-    </defaultConnectionFactory>
+    </defaultConnectionFactory >
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
