--- a/LMEntities/LMEntities.csproj
+++ b/LMEntities/LMEntities.csproj
@@ -52,9 +52,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Mapping\AspNetRoleMap.cs" />
-    <Compile Include="Mapping\AspNetUserRoleMap.cs" />
-    <Compile Include="Mapping\AspNetUsersMap.cs" />
     <Compile Include="Mapping\CityStateZipMap.cs" />
     <Compile Include="Mapping\EventAddressMap.cs" />
     <Compile Include="Mapping\EventCommentMap.cs" />
@@ -87,10 +84,8 @@
     <Compile Include="Mapping\TeamTitleMap.cs" />
     <Compile Include="Mapping\UserMap.cs" />
     <Compile Include="Mapping\UserTypeMap.cs" />
+    <Compile Include="Mapping\GroundMap.cs" />
     <Compile Include="Mapping\YearMap.cs" />
-    <Compile Include="Models\AspNetRole.cs" />
-    <Compile Include="Models\AspNetUser.cs" />
-    <Compile Include="Models\AspNetUserRoles.cs" />
     <Compile Include="Models\CityStateZip.cs" />
     <Compile Include="Models\Event.cs" />
     <Compile Include="Models\EventAddress.cs" />
@@ -123,6 +118,7 @@
     <Compile Include="Models\TeamTitle.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserType.cs" />
+    <Compile Include="Models\Ground.cs" />
     <Compile Include="Models\Year.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SportsSiteContext.cs" />
