--- a/LeagueManagement/packages.config
+++ b/LeagueManagement/packages.config
@@ -3,7 +3,8 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EFCodeFirst" version="0.8" targetFramework="net451" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="jQuery" version="2.2.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
@@ -30,6 +31,7 @@
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
+  <package id="T4Scaffolding" version="0.8.0" targetFramework="net451" />
   <package id="Unity" version="4.0.1" targetFramework="net45" />
   <package id="Unity.Mvc" version="4.0.1" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net451" />
