--- a/LeagueManagement/LeagueManagement.csproj
+++ b/LeagueManagement/LeagueManagement.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Controllers\TeamsController.cs" />
     <Compile Include="Controllers\TeamTitlesController.cs" />
     <Compile Include="Controllers\UmpiresController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -369,11 +370,17 @@
     <Content Include="Views\Seasons\Details.cshtml" />
     <Content Include="Views\Seasons\Edit.cshtml" />
     <Content Include="Views\Seasons\Index.cshtml" />
-    <Content Include="Views\Umpires\Create.cshtml" />
     <Content Include="Views\Umpires\Delete.cshtml" />
     <Content Include="Views\Umpires\Details.cshtml" />
     <Content Include="Views\Umpires\Edit.cshtml" />
     <Content Include="Views\Umpires\Index.cshtml" />
+    <Content Include="Views\Users\Create.cshtml" />
+    <Content Include="Views\Users\Delete.cshtml" />
+    <Content Include="Views\Users\Details.cshtml" />
+    <Content Include="Views\Users\Edit.cshtml" />
+    <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Shared\_PartialStyle.cshtml" />
+    <Content Include="Views\Umpires\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
