--- a/LMEntities/LMEntities.csproj
+++ b/LMEntities/LMEntities.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\DateRangeAttribute.cs" />
     <Compile Include="Mapping\CityStateZipMap.cs" />
     <Compile Include="Mapping\EventAddressMap.cs" />
     <Compile Include="Mapping\EventCommentMap.cs" />
