--- a/LeagueManagement/Web.config
+++ b/LeagueManagement/Web.config
@@ -17,6 +17,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="TeamPhotoFolder" value="TeamPhotos"/>
+  <add key="UsersPhotoFolder" value="UsersPhotos"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
